# AMDMIGraphX

./: requirements.txt
src/: CMakeLists.txt  shape.cpp  simplify_algebra.cpp
src/api/: CMakeLists.txt
src/driver/: CMakeLists.txt  main.cpp
src/include/migraphx/: check_shapes.hpp
src/onnx/: CMakeLists.txt  onnx.cpp
src/py/: CMakeLists.txt  migraphx_py.cpp
src/targets/gpu/: target.cpp
test/: CMakeLists.txt
